--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <!--
-    Forty by HTML5 UP
-    html5up.net | @ajlkn
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Unshared Labs © 2025. All rights reserved.
   -->
 <html>
 
