--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -78,7 +78,7 @@
 				{% endfor %}
 			</ul>
 			<ul class="copyright">
-				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
+				<li>&copy; {{ site.title }} {{ site.subtitle }} 2025</li>
 			</ul>
 		</div>
 	</footer>
