--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Contact -->
-<section id="contact">
+<!-- <section id="contact">
 	<div class="inner">
 		<section>
 			<form action="https://formsubmit.co/{{ site.email }}" method="POST">
@@ -61,7 +61,7 @@
 			</section>
 		</section>
 	</div>
-</section>
+</section> -->
 
 <!-- Footer -->
 	<footer id="footer">
@@ -78,7 +78,7 @@
 				{% endfor %}
 			</ul>
 			<ul class="copyright">
-				<li>&copy; {{ site.title }} {{ site.subtitle }} 2025</li>
+				<li>{{ site.title }} {{ site.subtitle }} &copy;  2025</li>
 			</ul>
 		</div>
 	</footer>
