--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -78,3 +78,6 @@
 	@import 'layout/footer';
 	@import 'layout/wrapper';
 	@import 'layout/menu';
+	@import 'layout/product';
+	@import 'layout/pricing';
+	@import 'layout/get_started';
