--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Learn More</a></li>
+                    <li><a href="learn_more.html" class="button next">Learn More</a></li>
                 </ul>
             </div>
         </section>
